# CrystalOS

./: .gitmodules  .nf  Cargo.toml  Dockerfile  README.md  bacon.toml  hardware.sh  rickroll.txt
.cargo/: config.toml
.github/workflows/: rust.yml
.obsidian/: workspace.json
docs/: crystal-api.md  main.md
docs/standard library docs/: application.rs.md  io.rs.md  random.rs.md
src/: lib.rs  main.rs
src/applications/: crystalfetch.rs  shell_rewrite.rs
src/applications/crystal_rpg/: init.rs
src/system/: mod.rs
src/system/kernel/: ahci.rs  allocator.rs  authenticator.rs  gdt.rs  interrupts.rs  memory.rs  mod.rs  os.rs  render.rs  render2.rs  serial.rs  sysinit.rs
src/system/kernel/fs/: mod.rs
src/system/kernel/multitasking/: mod.rs  thread.rs  thread_switch.asm  thread_switch.rs
src/system/kernel/tasks/: executor.rs  keyboard.rs  mod.rs
src/system/kernel/threading/: mod.rs  thread_switch.s
src/system/kernel/threading2/: mod.rs  thread_switch.rs
src/system/std/: application.rs  frame.rs  fs.rs  io.rs  mod.rs  os.rs  random.rs  render.rs  syscall.rs  tasks.rs  time.rs
src/user/: mod.rs
src/user/lib/: coords.rs  geometry.rs  mod.rs
src/user/lib/gui_v2/: mod.rs  widgets.rs
src/user/lib/libgui/: cg_core.rs  cg_inputs.rs  cg_utils.rs  cg_widgets.rs  libgui_core.rs  libgui_elements.rs  mod.rs
src/user/lib/libgui_old_archive/: libgui_core.rs  libgui_elements.rs  mod.rs
templates_and_stuff/: application_template.rs
tests/: allocation.rs  should_panic.rs  stack_overflow.rs  startup.rs
